# linalg-sandbox

./: .gitignore  CMakeLists.txt  build.sh  conanfile.txt  readme.md
src/: CMakeLists.txt  householder.cpp  householder.h  matrix.cpp  matrix.h
test/: CMakeLists.txt  catch_householder.cpp  catch_matrix.cpp
